--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dragonmu/EasyTypograph",
+    "name": "dragonmu/easy-typograph",
     "description": "free and easy typograph",
     "require-dev": {
         "satooshi/php-coveralls": "dev-master"
